--- a/index.html
+++ b/index.html
@@ -1,79 +1,40 @@
-<!DOCTYPE html>
-<html>
+---
+title: Fatec Sistemas para Internet
+tagline: Repositório com arquivos, aulas, apostilas entre outras coisas relacionadas ao curso de SI iniciado no 1º semetre de 2013 na Fatec Rubens Lara.
+layout: home
+group: navigation
+---
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Fatec-si : Repositório com arquivos, aulas, apostilas entre outras coisas relacionadas ao curso de SI iniciado no 1º semetre de 2013 na Fatec Rubens Lara.">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Fatec-si</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/adammacias/fatec-si">View on GitHub</a>
-
-          <h1 id="project_title">Fatec-si</h1>
-          <h2 id="project_tagline">Repositório com arquivos, aulas, apostilas entre outras coisas relacionadas ao curso de SI iniciado no 1º semetre de 2013 na Fatec Rubens Lara.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/adammacias/fatec-si/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/adammacias/fatec-si/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Fatec-si maintained by <a href="https://github.com/adammacias">adammacias</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+  {% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+    {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
+  
+    {% if forloop.first %}
+      <h4><span class="label label-primary">{{this_month}}/{{this_year}}</span></h4>
+      <ul class="list-unstyled list-posts">
+    {% endif %}
+  
+    <li>
+    	<h4><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a> <small>(DIA {{ post.date | date: "%e" }})</small></h4>
+    	<p><a href="{{ BASE_PATH }}{{ post.url }}">{{ BASE_PATH }}{{ post.url }}</a></p>
+    </li>
+  
+    {% if forloop.last %}
+      </ul>
+    {% else %}
+      {% if this_year != next_year %}
+        </ul>
+        <h4><span class="label label-primary">{{next_month}}/{{next_year}}</span></h4>
+        <ul class="list-unstyled list-posts">
+      {% else %}    
+        {% if this_month != next_month %}
+          </ul>
+          <h4><span class="label label-primary">{{next_month}}/{{next_year}}</span></h4>
+          <ul class="list-unstyled list-posts">
+        {% endif %}
+      {% endif %}
+    {% endif %}
+  {% endfor %}
+{% assign posts_collate = nil %}
