--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ tagline: Repositório com arquivos, aulas, apostilas entre outras coisas relacio
 layout: home
 group: navigation
 ---
+{% include JB/setup %}
 
   {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
