--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ group: navigation
 ---
 {% include JB/setup %}
 
+  <p class="text-center">
+    <img src="https://cloud.githubusercontent.com/assets/1139893/6883585/e33973a8-d592-11e4-9aca-959c3472b16e.gif" alt="" class="img-responsive" style="min-width:100%"> 
+  </p>
+
   {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
