--- a/pages.html
+++ b/pages.html
@@ -10,3 +10,18 @@ group: navigation
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
 </ul>
+
+<h2 class="page-header">Links</h2>
+
+<ul> 
+	<li><a href="{{ BASE_PATH }}/calendario.html">Calendário</a></li> 
+	<li><a href="https://github.com/adammacias/fatec-si" target="_blank">GitHub</a></li>
+	<li><a href="https://trello.com/b/qYTMMlgy/fatec-curso-si" target="_blank">Trello</a></li>
+</ul>
+
+<h2 class="page-header">Disciplinas</h2>
+
+<ul>
+{% assign pages_list = site.disciplinas %}
+{% include JB/pages_list %}
+</ul>
